# POC4

./: .gitignore  Cargo.toml
accumulator/: accumulator.rs  verification.rs
accumulator/src/: lib.rs  verification.rs
contract/: Cargo.toml
contract/src/: executor.rs  lib.rs  state.rs  types.rs
controller/: Cargo.toml  build.rs
controller/src/: enarx.rs  hyper_integration.rs  lib.rs  main.rs  paired_executor.rs  server.rs  service_wrapper.rs  simulator.rs  verification.rs
controller/src/proto/: conversions.rs  mod.rs  teeservice.rs
controller/tests/: execution_tests.rs
controller/tests/contracts/: simple_add.rs
controller/tests/contracts/simple_add/: Cargo.toml
controller/tests/contracts/simple_add/.cargo/: config.toml
controller/tests/contracts/simple_add/src/: lib.rs  types.rs
hyper/: Cargo.toml  test.wat  wrapper.h
hyper/src/: lib.rs  runtime.rs  test_utils.rs
hyper/tests/: contract_test.rs
interface/: Cargo.toml  build.rs
interface/src/: lib.rs  types.rs
wasm-module/: Cargo.toml
wasm-module/src/: computation.rs  lib.rs
wasmlanche/: Cargo.toml
wasmlanche/src/: lib.rs
