[workspace]
resolver = "2"  
members = [
    "interface",
    "wasm-module",
    "controller",
    "contract"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tal <tal@rhombus-tech.com>"]
description = "Dual TEE execution system using Enarx"

[workspace.dependencies]
# Serialization
borsh = { version = "1.5.1", features = ["derive"] }
borsh-derive = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Crypto
sha2 = "0.10"

# Wasmlanche dependencies
sdk-macros = { path = "../../hyper/x/contracts/sdk-macros" }
simulator = { path = "../../hyper/x/contracts/simulator" }
