[package]
name = "tee-contract"
version.workspace = true
edition.workspace = true

[dependencies]
# Interface and serialization
tee-interface = { path = "../interface" }
borsh = { workspace = true }

# Crypto
sha2 = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]