[package]
name = "tee-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tee-interface = { path = "../interface" }
wasmlanche = { path = "../../hyper/x/contracts/wasmlanche", features = ["simulator"] }
async-trait = { workspace = true }
futures-util = "0.3"
tempfile = "3.8"

# CLI
clap = { workspace = true }

# Serialization
borsh = { workspace = true }
borsh-derive = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = "1.0"

# Crypto
sha2 = "0.10"

# Time
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = { workspace = true }