[package]
name = "hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.77"
borsh = "1.3.0"
borsh-derive = "1.3.0"
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.56"
tokio = { version = "1.0", features = ["full"] }
tee-interface = { path = "../interface" }
wasmtime = "14.0"
wat = "1.0"

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-test = "0.4.3"
