[package]
name = "tee-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
borsh = { version = "1.2", features = ["derive"] }
borsh-derive = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"

# Proc macro support
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# gRPC dependencies
tonic = { version = "0.10", features = ["transport", "codegen"] }
prost = "0.12"

[build-dependencies]
tonic-build = { version = "0.10" }