[package]
name = "tee-wasm-module"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]  # Compile as dynamic library for WASM

[dependencies]
borsh = { workspace = true, features = ["derive"] }
borsh-derive = { workspace = true }
tee-interface = { path = "../interface" }
wasmlanche = { path = "../../hyper/x/contracts/wasmlanche" }
sha2.workspace = true
thiserror = "1.0"
log = "0.4"

[dev-dependencies]