[package]
name = "wasm-module"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]  # Compile as dynamic library for WASM

[dependencies]
# Our interface
tee-interface = { path = "../interface" }

# Serialization
borsh = { version = "1.5.1", features = ["derive"] }
borsh-derive = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Crypto
sha2 = "0.10"

# Logging
log = "0.4"

# Wasmlanche
wasmlanche = { path = "../../hyper/x/contracts/wasmlanche" }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]